Bug 1467537 - The delete trigger on moz_updateoriginsinsert_temp is recalculating the whole table every time. r=adw

The trigger is missing a WHERE clause, and as such it ends up doing a lot more work than necessary.

The nsAutoCompleteController changes cover a bug where VK_RIGHT autofills when it's not necessary,
and by doing that it will move the caret to an unexpected position (far right) even if it didn't
actually complete some preselected text.

MozReview-Commit-ID: 1mVbxCdqVSr